src/sass/import/_attorneys-archive-img.scss
.ctnr-archive-attorney-img {
	position: relative;
	> img {
		// max-height: 50rem;
		width: auto;
		margin-left: auto;
		margin-right: auto;
		max-width: 100%;
		height: auto;
	}
}
.archive-attorney {
	position: relative;
	.anchor-btn-cta {
		color: inherit;
	}
}
.ctnr-archive-attorney-name-title {
  position: absolute;
  bottom: 0;
  width: 100%;
	text-align: center;
	font-size: 1.8rem;
	line-height: 1;
	padding: 3rem 1.5rem;
	color: $white;
	.archive-attorney-name {
		font-weight: 700;
		font-size: 2.2rem;
		margin-bottom: .25em;
		text-transform: initial;
		width: 100%;
	}
	.archive-attorney-title {
		font-weight: 500;
		text-transform: initial;
	}
}

